objects/Map__c/Map__c.object-meta.xml
<CustomObject>
    <label>Map</label>
    <nameField>
        <label>Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>