objects/Map__c/fields/Map_Image__c.field-meta.xml
<CustomField>
    <fullName>Map_Image__c</fullName>
    <inlineHelpText>Add a URL for the image of the map.
One option is uploading a static resource file as public and add the link here.</inlineHelpText>
    <label>Map Image</label>
    <required>true</required>
    <type>Url</type>
</CustomField>